--- a/cities.html
+++ b/cities.html
@@ -27,6 +27,7 @@
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
     <li>Tokyo    (i dont know)</li>
+    <li>Paris (still dont know)</li>
   </ol>
 
 </body>
