--- a/cities.html
+++ b/cities.html
@@ -30,6 +30,7 @@
     <li>Tokyo    (i dont know)</li>
     <li>Paris (still dont know)</li>
     <li>Paris2 (still dont know)</li>
+    <li>Paris3 (still dont know)</li>
   </ol>
 
 </body>
