--- a/cities.html
+++ b/cities.html
@@ -29,6 +29,7 @@
     <li>Mumbai   (12,478,447)</li>
     <li>Tokyo    (i dont know)</li>
     <li>Paris (still dont know)</li>
+    <li>Shanghai3 (still dont know)</li>
   </ol>
 
 </body>
